deploy/dev/deploy-envoy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  labels:
    app: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      initContainers:
        - name: init
          image: busybox:1.34.0
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            # - mkdir /envoy/config2
            - cat /etc/envoy/envoy.yaml > /envoy/envoy.yaml
          volumeMounts:
          - name: config
            mountPath: /envoy
            readOnly: false
          - name: envoy-config
            mountPath: /etc/envoy
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.14.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: req
              protocol: TCP
              containerPort: 443
            - name: admin
              containerPort: 8081
          command: 
            - /bin/sh
            - -c
            - envoy -c /home/envoy.yaml
          volumeMounts:
            - name: config
              mountPath: /envoy
              readOnly: false
            - name: envoy-config
              mountPath: /home
              readOnly: false
      volumes:
        - name: config
          emptyDir: {}
        - name: envoy-config
          configMap:
            name: envoy-configmap
